--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>145 Neck Path</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <script>
         $(document).ready(function () {
             $('.sidebarBtn').click(function () {
-                $('.sidebar').toggleClass('active')
+                $('.sidebar').toggleClass('active');
                 $('.sidebarBtn').toggleClass('toggle')
             })
         })
@@ -21,17 +24,12 @@
 </head>
 <body>
 <section id="first">
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="images/np1.JPG" class="d-block w-100" alt="...">
+    <div class="parallax-window" data-parallax="scroll" data-image-src="images/np1.jpg">
+        <div style="padding-top: 100px; text-align: center">
+            <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1800">GLASS HOUSE CLUB AT EAST HAMPTON</h1>
+            <h1 style="color: #fff" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="2800"> </h1>
         </div>
-        <div class="carousel-item">
-            <img src="images/np1.JPG" class="d-block w-100" alt="...">
-        </div>
-
     </div>
-</div>
 
 </div>
     <div class="sidebar">
@@ -44,9 +42,28 @@
             <span></span>
         </button>
     </div>
-    <h1>145 Neck Path</h1>
 </section>
 
+<section class="about">
+    <h1 style="padding-bottom: 200px;">About</h1>
+    <div class="parallax-window2" data-parallax="scroll" data-image-src="images/np2.jpg">
+        <div style="padding-top: 100px; text-align: center">
+            <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1800">ABOUT</h1>
+        </div>
+    </div>
+</section>
+
+<section class="gallery">
+    <h1>Gallery</h1>
+</section>
+<section class="contact">
+    <h1>Contact</h1>
+</section>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
 
