--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
 </section>
 
 <section class="about">
-    <h1 style="padding-bottom: 200px;">About</h1>
-    <div class="parallax-window2" data-parallax="scroll" data-image-src="images/np2.jpg">
+    <h1 style="padding-bottom: 100px; text-align: center; padding-top: 50px; font-size: 60px;">ABOUT</h1>
+    <div class="parallax-window2" data-parallax="scroll" data-image-src="images/np7.jpg">
         <div style="padding-top: 100px; text-align: center">
-            <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1800">ABOUT</h1>
         </div>
     </div>
 </section>
