--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <section id="first">
     <div class="parallax-window" data-parallax="scroll" data-image-src="images/np1.jpg">
         <div style="padding-top: 70px; text-align: center">
-            <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1000">GLASS HOUSE CLUB AT EAST HAMPTON</h1>
+            <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1000"></h1>
             <h1 style="color: #fff" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="2800"> </h1>
         </div>
     </div>
