--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 </head>
 <body>
 <section id="first">
-    <div class="parallax-window" data-parallax="scroll" data-image-src="images/np8.jpg">
+    <div class="imgBox">
+    <div class="parallax-window col-sm-12" data-parallax="scroll" data-image-src="images/np8.jpg" >
         <div style="padding-top: 70px; text-align: center">
             <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1000"></h1>
             <h1 style="color: #fff" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="2800"> </h1>
         </div>
+    </div>
     </div>
 
 </div>
