--- a/index.html
+++ b/index.html
@@ -46,18 +46,22 @@
     </div>
 </section>
 
-<section class="about">
-    <h1 style="padding-bottom: 100px; text-align: center; padding-top: 50px; font-size: 60px;">ABOUT</h1>
-    <p>Unique & In a class of its own! Design by Juan A. Figueroa, creative mind behind the highly acclaimed Williamsburg Savings Bank restoration and conversion at 175 Broadway.
+<section class="about container-fluid" c>
+    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 50px;"
+        data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
+    <p data-aos="fade-left" data-aos-duration="1500" data-aos-delay="1000">Unique & In a class of its own! Design by Juan A. Figueroa, creative mind behind the highly acclaimed Williamsburg Savings Bank restoration and conversion at 175 Broadway.
         Engineering by Jeff Smilow, structural engineer of NYC's Freedom Tower. The open living, dining,
         kitchen space is unencumbered by columns and framed by "floor to ceiling" glass walls.
         Seamless polished concrete floors flow throughout the three levels of this 10,000 square foot house. Custom Scavolini kitchen with top of the line appliances by Gaggennau.
-        Two independent staircases lead to a second level.
+        Two independent staircases lead to a second level. </p>
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300">
         The first staircase leads to two master suites featuring custom walk-in closets and master bathrooms, with natural stone, white quartz, double shower heads, and luxurious soaking tub.
         The second staircase leads to four guest bedrooms, each one with ensuite all marble bathrooms,
         custom closets, and individually controlled air conditioning.
         The lower level houses a 4 car garage connected to the driveway via an underground tunnel. A finished lower level lounge and oversized marble guest bathroom offer space when entertaining guests.
         Additional lower level space has the potential for a cinema, recreation or storage.
+    </p>
+    <p data-aos="fade-left" data-aos-duration="1500" data-aos-delay="1600">
         The outdoor area offers an oversized heated, saltwater gunite pool (27x55') with a cleverly inlaid hot tub that features an independent music system and custom lighting.
         An expansive stone patio leads from the house, surrounds the pool, and overlooks a 20 acre reserve adjacent to the property.
         A Smart Home system controls the entire house including the front gates, lighting, radiant floor heat, and air conditioning.
