--- a/index.html
+++ b/index.html
@@ -135,7 +135,32 @@
 <section class="contact">
     <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">Contact</h1>
+    <div class="row clearfix" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+        <div class="offset-sm-2 col-sm-8" style="z-index:1">
+            <form action="mailto:andrew_wehmeier@yahoo.com" id="form1" method="post">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input  class="form-control" type="text">
+                </div>
+                <div class="form-group">
+                    <label>Phone</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Message</label>
+                    <textarea class="form-control textarea" size="300"></textarea>
+                </div>
+                <div class="form-group text-center">
+                    <button class=" btnD1" form="form1" type="submit" value="Send">Send</button>
+                </div>
+            </form>
+        </div>
 
+    </div>
 </section>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
