--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <div class="imgBox">
     <div class="parallax-window col-sm-12" data-parallax="scroll" data-image-src="images/np8.jpg" >
         <div style="padding-top: 70px; text-align: center">
-            <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1000"></h1>
-            <h1 style="color: #fff" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="2800"> </h1>
+
+            <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1000">Glass House</h1>
+            <h1 style="color: #fff" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="2800">Summer 2019</h1>
         </div>
+
     </div>
     </div>
 
