--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <section id="first">
-    <div class="imgBox">
+    <div class="">
     <div class="parallax-window col-sm-12" data-parallax="scroll" data-image-src="images/np8.jpg" >
         <div style="padding-top: 70px; text-align: center">
 
@@ -48,6 +48,7 @@
         </button>
     </div>
 </section>
+
 
 <section class="about container-fluid" >
     <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px;"
