--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="parallax-window col-sm-12" data-parallax="scroll" data-image-src="images/np8.jpg" >
         <div style="padding-top: 70px; text-align: center">
 
-            <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1000">Glass House</h1>
-            <h1 style="color: #fff" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="2800">Summer 2019</h1>
+           <!-- <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1000">Glass House</h1>
+            <h1 style="color: #fff" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="2800">Summer 2019</h1>-->
         </div>
 
     </div>
@@ -50,7 +50,7 @@
 </section>
 
 
-<section class="about container-fluid" >
+<section class="about container" >
     <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
         <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="gallery">
+<section class="gallery container" >
     <h1 style="padding-bottom: 30px; text-align: center; padding-top: 50px; font-size: 35px;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">Gallery</h1>
     <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
