--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>145 Neck Path</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -26,11 +27,8 @@
 <body>
 <section id="first">
     <div class="">
-    <div class="parallax-window col-sm-12" data-parallax="scroll" data-image-src="images/np8.jpg" >
+    <div class="parallax-window col-sm-12 " data-parallax="scroll" data-image-src="images/np8.jpg" >
         <div style="padding-top: 70px; text-align: center">
-
-           <!-- <h1 style="color: #fff" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="1000">Glass House</h1>
-            <h1 style="color: #fff" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="2800">Summer 2019</h1>-->
         </div>
 
     </div>
@@ -51,7 +49,7 @@
 
 
 <section class="about container" >
-    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px;"
+    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
         <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
@@ -72,7 +70,7 @@
 </section>
 
 <section class="gallery container" >
-    <h1 style="padding-bottom: 30px; text-align: center; padding-top: 50px; font-size: 35px;"
+    <h1 style="padding-bottom: 30px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">Gallery</h1>
     <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
@@ -136,7 +134,7 @@
         Located in the enclave of renowned artists: Jackson Pollack, Lee Krasner, Willem deKooning, James Brooks and Charlotte Park.</p>
 </section>
 <section class="contact">
-    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px;"
+    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">Contact</h1>
     <div class="row clearfix" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <div class="offset-sm-2 col-sm-8" style="z-index:1">
