--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <script>
         $(document).ready(function () {
@@ -49,7 +50,7 @@
 
 
 <section class="about container" >
-    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
+    <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
         <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
@@ -70,7 +71,7 @@
 </section>
 
 <section class="gallery container" >
-    <h1 style="padding-bottom: 30px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
+    <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">Gallery</h1>
     <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
@@ -120,7 +121,7 @@
         </div>
     </div>
     </container>
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300" style="padding-top: 25px;" class="container">
+    <!--<p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300" style="padding-top: 25px;" class="container">
         The first staircase leads to two master suites featuring custom walk-in closets and master bathrooms, with natural stone, white quartz, double shower heads, and luxurious soaking tub.
         The second staircase leads to four guest bedrooms, each one with ensuite all marble bathrooms,
         custom closets, and individually controlled air conditioning.
@@ -131,7 +132,7 @@
         The outdoor area offers an oversized heated, saltwater gunite pool (27x55') with a cleverly inlaid hot tub that features an independent music system and custom lighting.
         An expansive stone patio leads from the house, surrounds the pool, and overlooks a 20 acre reserve adjacent to the property.
         A Smart Home system controls the entire house including the front gates, lighting, radiant floor heat, and air conditioning.
-        Located in the enclave of renowned artists: Jackson Pollack, Lee Krasner, Willem deKooning, James Brooks and Charlotte Park.</p>
+        Located in the enclave of renowned artists: Jackson Pollack, Lee Krasner, Willem deKooning, James Brooks and Charlotte Park.</p>-->
 </section>
 <section class="contact">
     <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
@@ -163,6 +164,23 @@
 
     </div>
 </section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <ul class="sci">
+                    <li><a href="mailto:andrew_wehmeier@yahoo.com"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/andrew-wehmeier-7382a593/"><i class="fab fa-airbnb"></i></a></li>
+                    <li><a href="https://www.instagram.com/theglasshouse_/?hl=en"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+                <p class="cprty">
+                    @Copyright 2019
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
+
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="js/lightbox.min.js"></script>
