--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <section class="gallery container" >
     <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
-        data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">Gallery</h1>
+        data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">GALLERY</h1>
     <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
     <container>
@@ -136,7 +136,7 @@
 </section>
 <section class="contact">
     <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
-        data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">Contact</h1>
+        data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">CONTACT</h1>
     <div class="row clearfix" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <div class="offset-sm-2 col-sm-8" style="z-index:1">
             <form action="mailto:andrew_wehmeier@yahoo.com" id="form1" method="post">
@@ -174,7 +174,7 @@
                     <li><a href="https://www.instagram.com/theglasshouse_/?hl=en"><i class="fab fa-instagram"></i></a></li>
                 </ul>
                 <p class="cprty">
-                    @Copyright 2019
+                    @Copyright 145 Neck Path 2019
                 </p>
             </div>
         </div>
