--- a/index.html
+++ b/index.html
@@ -140,23 +140,23 @@
     <div class="row clearfix" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <div class="offset-sm-2 col-sm-8" style="z-index:1">
             <form action="mailto:andrew_wehmeier@yahoo.com" id="form1" method="post">
-                <div class="form-group">
+                <div class="form-group" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">
                     <label>Name</label>
                     <input class="form-control">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">
                     <label>Email</label>
                     <input  class="form-control" type="text">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">
                     <label>Phone</label>
                     <input type="text" class="form-control">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">
                     <label>Message</label>
                     <textarea class="form-control textarea" size="300"></textarea>
                 </div>
-                <div class="form-group text-center">
+                <div class="form-group text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">
                     <button class=" btnD1" form="form1" type="submit" value="Send">Send</button>
                 </div>
             </form>
@@ -170,7 +170,7 @@
             <div class="col-sm-12">
                 <ul class="sci">
                     <li><a href="mailto:andrew_wehmeier@yahoo.com"><i class="fa fa-envelope"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/andrew-wehmeier-7382a593/"><i class="fab fa-airbnb"></i></a></li>
+                    <li><a href="https://www.airbnb.com/rooms/33010695?location=East%20Hampton%2C%20NY%2C%20United%20States&adults=1&guests=1&source_impression_id=p3_1557022708_E2BCJ6gF6jeltY5C&s=LQaZ8Tcc"><i class="fab fa-airbnb"></i></a></li>
                     <li><a href="https://www.instagram.com/theglasshouse_/?hl=en"><i class="fab fa-instagram"></i></a></li>
                 </ul>
                 <p class="cprty">
