--- a/index.html
+++ b/index.html
@@ -181,7 +181,16 @@
     </div>
 </footer>
 
+<script type="text/javascript">
 
+    $(window).scroll(function() {
+        var scrollPos = $(this).scrollTop();
+        $(".parallax-window").css({
+            'background-size' : 110 + scrollPos + '%'
+        });
+    });
+
+</script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="js/lightbox.min.js"></script>
 <script>
