--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 <body>
 
 
-<div class="wrapper">
-    <h1>Hello There!</h1>
+<div class="wrapper container-fluid">
 </div>
 <div class="welcome-section content-hidden">
     <div class="content-wrap">
@@ -37,10 +36,12 @@
             <li>1</li>
             <li>4</li>
             <li>5</li>
+            <li> </li>
             <li>N</li>
             <li>E</li>
             <li>C</li>
             <li>K</li>
+            <li> </li>
             <li>P</li>
             <li>A</li>
             <li>T</li>
