--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li>T</li>
             <li>H</li>
         </ul>
-        <a href="" class="enter-button">come in</a>
+        <a href="" class="enter-button">press to enter</a>
     </div>
 
 </div>
