--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
             })
         })
     </script>
+    <script type="text/javascript">
+        $(document).scroll(function() {
+            $('.sidebar').toggleClass('scrolled', $(this).
+            scrollTop() > $('.sidebar').height())
+        });
+    </script>
 </head>
-<body>
+
+
+<body data-spy="scroll" data-target=".sidebar" data-offset="50">
 
 
 <div class="wrapper container-fluid">
@@ -48,7 +56,7 @@
             <li>T</li>
             <li>H</li>
         </ul>
-        <a href="" class="enter-button">press to enter </a>
+        <a href="" class="enter-button">enter </a>
     </div>
 
 </div>
@@ -82,9 +90,9 @@ $(function () {
 </div>
     <div class="sidebar">
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <button class="sidebarBtn">
             <span></span>
@@ -93,28 +101,27 @@ $(function () {
 </section>
 
 
-<section class="about container" >
+<section class="about container" id="about" >
     <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
         <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1000">Unique & In a class of its own! Design by Juan A. Figueroa,
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1000" style="display: block">Unique & In a class of its own! Design by Juan A. Figueroa,
         creative mind behind the highly acclaimed Williamsburg Savings Bank restoration and conversion at 175 Broadway.
     </p>
 
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300">
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300" style="display: block">
         Engineering by Jeff Smilow, structural engineer of NYC's Freedom Tower. The open living, dining,
         kitchen space is unencumbered by columns and framed by "floor to ceiling" glass walls.
     </p>
 
     <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1600">
         Seamless polished concrete floors flow throughout the three levels of this 10,000 square foot house. Custom Scavolini kitchen with top of the line appliances by Gaggennau.
-        Two independent staircases lead to a second level.
     </p>
 
 </section>
 
-<section class="gallery container" >
+<section class="gallery container" id="gallery" >
     <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">GALLERY</h1>
     <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
@@ -240,7 +247,7 @@ $(function () {
         A Smart Home system controls the entire house including the front gates, lighting, radiant floor heat, and air conditioning.
         Located in the enclave of renowned artists: Jackson Pollack, Lee Krasner, Willem deKooning, James Brooks and Charlotte Park.</p>-->
 </section>
-<section class="contact container">
+<section class="contact container" id="contact">
     <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">CONTACT</h1>
     <div class="row clearfix" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
