--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $(function () {
 </script>
 <section id="first">
     <div class="">
-    <div class="parallax-window " data-parallax="scroll" data-image-src="images/front1.jpg" >
+    <div class="parallax-window " data-parallax="scroll" data-image-src="images/np8.jpg" >
         <div style="padding-top: 70px; text-align: center">
         </div>
 
