--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ $(function () {
 
 
 <section class="about container" id="about" >
-    <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
+    <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Playfair Display', serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
         <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
@@ -126,7 +126,7 @@ $(function () {
 </section>
 
 <section class="gallery container" id="gallery" >
-    <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
+    <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Playfair Display', serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">GALLERY</h1>
     <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
@@ -252,7 +252,7 @@ $(function () {
         Located in the enclave of renowned artists: Jackson Pollack, Lee Krasner, Willem deKooning, James Brooks and Charlotte Park.</p>-->
 </section>
 <section class="contact container" id="contact">
-    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Quicksand', sans-serif;"
+    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Playfair Display', serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">CONTACT</h1>
     <div class="row clearfix" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <div class="offset-sm-2 col-sm-8" style="z-index:1">
