--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $(function () {
 </script>
 <section id="first">
 <div class="video">
-    <video autoplay loop class="video-background clearfix" muted play-inline>
+    <video autoplay loop class="video-background" muted>
         <source src="images/vid.mp4" type="video/mp4">
     </video>
 </div>
