--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 <div class="wrapper container-fluid">
 </div>
 <div class="welcome-section content-hidden">
+    <video autoplay loop class="video-background" muted>
+        <source src="images/vid.mp4" type="video/mp4">
+    </video>
     <div class="content-wrap">
 
         <ul class="fly-in-text">
