--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Quicksand" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -59,7 +60,7 @@
             <li>T</li>
             <li>H</li>
         </ul>
-        <a href="" class="enter-button">enter </a>
+        <a href="" class="enter-button">enter</a>
     </div>
 
 </div>
@@ -113,16 +114,16 @@ $(function () {
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
         <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1000" style="display: block">Unique & In a class of its own! Design by Juan A. Figueroa,
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1000" style="display: block; font-size: 18px;">Unique & In a class of its own! Design by Juan A. Figueroa,
         creative mind behind the highly acclaimed Williamsburg Savings Bank restoration and conversion at 175 Broadway.
     </p>
 
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300" style="display: block">
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300" style="display: block; font-size: 18px;">
         Engineering by Jeff Smilow, structural engineer of NYC's Freedom Tower. The open living, dining,
         kitchen space is unencumbered by columns and framed by "floor to ceiling" glass walls.
     </p>
 
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1600">
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1600" style="display: block; font-size: 18px;">
         Seamless polished concrete floors flow throughout the three levels of this 10,000 square foot house. Custom Scavolini kitchen with top of the line appliances by Gaggennau.
     </p>
 
