--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li>T</li>
             <li>H</li>
         </ul>
-        <a href="" class="enter-button">enter</a>
+        <a href="" class="enter-button">Enter</a>
     </div>
 
 </div>
@@ -114,16 +114,16 @@ $(function () {
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
         <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1000" style="display: block; font-size: 18px;">Unique & In a class of its own! Design by Juan A. Figueroa,
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1000" style="display: block; font-size: 16px;">Unique & In a class of its own! Design by Juan A. Figueroa,
         creative mind behind the highly acclaimed Williamsburg Savings Bank restoration and conversion at 175 Broadway.
     </p>
 
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300" style="display: block; font-size: 18px;">
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1300" style="display: block; font-size: 16px;">
         Engineering by Jeff Smilow, structural engineer of NYC's Freedom Tower. The open living, dining,
         kitchen space is unencumbered by columns and framed by "floor to ceiling" glass walls.
     </p>
 
-    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1600" style="display: block; font-size: 18px;">
+    <p data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1600" style="display: block; font-size: 16px;">
         Seamless polished concrete floors flow throughout the three levels of this 10,000 square foot house. Custom Scavolini kitchen with top of the line appliances by Gaggennau.
     </p>
 
