--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Quicksand" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -24,6 +23,7 @@
                 $('.sidebarBtn').toggleClass('toggle')
             })
         })
+        
     </script>
     <script type="text/javascript">
         $(document).scroll(function() {
@@ -110,7 +110,7 @@ $(function () {
 
 
 <section class="about container" id="about" >
-    <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Playfair Display', serif;"
+    <h1 style="text-align: center; padding-top: 50px; font-size: 32px; font-family: 'Playfair Display', serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">ABOUT</h1>
         <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
@@ -130,7 +130,7 @@ $(function () {
 </section>
 
 <section class="gallery container" id="gallery" >
-    <h1 style="text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Playfair Display', serif;"
+    <h1 style="text-align: center; padding-top: 50px; font-size: 32px; font-family: 'Playfair Display', serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">GALLERY</h1>
     <hr data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" class="hr1">
 
@@ -256,7 +256,7 @@ $(function () {
         Located in the enclave of renowned artists: Jackson Pollack, Lee Krasner, Willem deKooning, James Brooks and Charlotte Park.</p>-->
 </section>
 <section class="contact container" id="contact">
-    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 35px; font-family: 'Playfair Display', serif;"
+    <h1 style="padding-bottom: 50px; text-align: center; padding-top: 50px; font-size: 32px; font-family: 'Playfair Display', serif;"
         data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">CONTACT</h1>
     <div class="row clearfix" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <div class="offset-sm-2 col-sm-8" style="z-index:1">
@@ -295,8 +295,13 @@ $(function () {
                     <li><a href="https://www.instagram.com/theglasshouse_/?hl=en"><i class="fab fa-instagram"></i></a></li>
                 </ul>
                 <p class="cprty">
+                    145 Neck Path
+                    East Hampton, NY 11937, United States
+                </p>
+                <p class="cprty">
                     @Copyright 145 Neck Path 2019
                 </p>
+
             </div>
         </div>
     </div>
